<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.knight.sandesh.SettingsActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_account_circle_black_48dp" />

    <TextView
        android:id="@+id/settings_uname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:text="@string/username"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/settings_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/this_is_my_status"
        android:textColor="?attr/editTextColor"
        android:textSize="24sp"
        android:layout_below="@+id/settings_uname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp" />

    <Button
        android:id="@+id/btn_change_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="93dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/change_image"
        android:layout_below="@+id/settings_status"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btn_change_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/change_status"
        android:layout_below="@+id/btn_change_image"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
