<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:backgroundTint="@color/colorPrimary"
    tools:context="com.knight.sandesh.StartActivity">

    <TextView
        android:id="@+id/welcome_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/welcome_to_sandesh"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="274dp" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/need_account" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_msg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/log_in" />
</RelativeLayout>
